# CommonProposalProject

./: CMakeLists.txt  README.md
ddsapp/: CMakeLists.txt  DDS.cpp  DDS.hpp  mainDDSAPP.cpp
src/: CMakeLists.txt  main.cpp  main.qml  qml.qrc
src/device/controller/: Controller.cpp  Controller.hpp
src/device/model/: Model.cpp  Model.hpp
src/device/model/signal/: UseCaseSignal.cpp  UseCaseSignal.hpp
src/device/modelView/: ModelView.cpp  ModelView.hpp
src/device/modelView/signal/: UseCaseSignal.cpp  UseCaseSignal.hpp
src/device/presenter/: Presenter.cpp  Presenter.hpp
src/device/presenter/signal/: UseCaseSignal.cpp  UseCaseSignal.hpp
src/device/viewCommunication/: DDS.cpp  DDS.hpp
src/device/viewCommunication/signal/: UseCaseSignal.cpp  UseCaseSignal.hpp
src/hmi/: HMI.cpp  HMI.hpp  View.cpp  View.hpp
src/hmi/qml/: DrawData.qml  SendMessage.qml
src/hmi/view/: View.cpp  View.hpp
src/idl/: CommonProposalProject.cxx  CommonProposalProject.hpp  CommonProposalProject.idl  CommonProposalProjectPlugin.cxx  CommonProposalProjectPlugin.hpp
src/utils/: DDSDataReader.hpp  DDSDataWriter.hpp  DDSView.cpp  DDSView.hpp  SignalPublisher.hpp  SignalSubscriber.hpp
